--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ibonkonesa/catastro-es",
   "type": "library",
-  "description": "Wrapper to use Spanish catastro WS",
+  "description": "Catastro API",
   "license": "MIT",
   "authors": [
     {
@@ -15,5 +15,13 @@
     "psr-4": {
       "IbonKonesa\\Catastro\\": "src/"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "6.5.6"
+  },
+  "require": {
+    "guzzlehttp/guzzle": "~6.0",
+    "ext-simplexml": "*",
+    "ext-json": "*"
   }
 }
