--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "phpunit/phpunit": "6.5.6"
   },
   "require": {
-    "guzzlehttp/guzzle": "~6.0",
+    "guzzlehttp/guzzle": "^6.0 || ^7.0",
     "ext-simplexml": "*",
     "ext-json": "*"
   }
